--- a/client/components/thank-you-v2/upsell/style.scss
+++ b/client/components/thank-you-v2/upsell/style.scss
@@ -2,150 +2,83 @@
 @import "@wordpress/base-styles/mixins";
 
 .thank-you__upsell {
-	display: flex;
-	width: 100%;
-	max-width: 650px;
+	border-radius: 2px;
+	border: 1px solid var(--color-border-subtle);
+	box-sizing: border-box;
+	display: grid;
+	grid-template-columns: 100px 1fr;
 	margin: 0 auto 80px;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	gap: 12px !important;
-	text-align: left;
+	max-width: 650px;
+	overflow: hidden;
+	width: 100%;
 
-	.thank-you__upsell-title {
-		margin: 0 24px;
-		color: var(--gray-gray-100, #101517);
-		font-size: $font-body;
-		font-family: "SF Pro Text", $sans;
-		font-style: normal;
-		font-weight: 500;
-		line-height: 24px; /* 150% */
-		letter-spacing: -0.32px;
-		align-self: stretch;
-		@media (max-width: $break-medium ) {
-			margin: 0;
-		}
+	@media (max-width: $break-small ) {
+		grid-template-columns: 100%;
+	}
+}
+
+.thank-you__upsell-image {
+	display: flex;
+
+	@media (max-width: $break-small ) {
+		max-height: 80px;
 	}
 
-	.thank-you__upsell-content {
-		display: flex;
-		width: 100%;
-		padding-right: 0;
-		align-items: center;
-		gap: 20px;
-		border-radius: 2px;
-		border: 1px solid var(--gray-gray-5, #dcdcde);
-
-		@media (max-width: $break-mobile ) {
-			display: flex;
-			flex-direction: column;
-			justify-content: center;
-			align-items: start;
-			align-self: stretch;
-		}
+	img {
+		object-fit: cover;
 	}
+}
 
-	.thank-you__upsell-content-details {
-		display: flex;
-		align-items: center;
-		gap: 16px;
-		flex: 1 0 0;
-		@media (max-width: $break-mobile ) {
-			display: flex;
-			flex-direction: column;
-			justify-content: center;
-			align-items: start;
-			gap: 12px;
-			align-self: stretch;
-		}
+.thank-you__upsell-content {
+	padding: 20px 24px 20px;
+
+	@media (max-width: $break-small ) {
+		padding: 20px;
 	}
+}
 
-	.thank-you__upsell-content-details-image {
-		width: 73px;
-		display: flex;
-		align-items: center;
-		@media (max-width: $break-mobile ) {
-			width: 100%;
-			height: auto;
-			flex-direction: column;
-			align-items: start;
-		}
-		.thank-you__upsell-content-details-image-content {
-			margin: 0 0 0 24px;
-			@media (max-width: $break-mobile ) {
-				margin: 24px 0 0 20px;
-			}
-		}
+.thank-you__upsell-preface {
+	color: var(--color-text-subtle);
+	font-size: $font-body-extra-small;
+	line-height: 20px;
+}
 
-	}
+.thank-you__upsell-title {
+	font-size: $font-title-small;
+	font-family: "SF Pro Display", $sans;
+	font-weight: 500;
+	line-height: 24px;
+	margin-bottom: 8px;
+}
 
-	.thank-you__upsell-content-text {
-		display: flex;
+.thank-you__upsell-description {
+	color: var(--color-text-subtle);
+	font-size: $font-body-small;
+	line-height: 20px;
+}
+
+.thank-you__upsell-actions {
+	display: flex;
+	gap: 8px;
+	margin-top: 20px;
+
+	@media (max-width: $break-small ) {
 		flex-direction: column;
-		justify-content: center;
-		align-items: flex-start;
-		gap: 4px;
-		flex: 1 0 0;
-		align-self: stretch;
-		padding: 16px 0;
-		@media (max-width: $break-mobile ) {
-			padding: 0;
-			margin: 0 20px;
-			gap: 12px;
-		}
 	}
 
-	.thank-you__upsell-content-text-description {
-		color: var(--color-text-subtle, #50575e);
+	a.components-button {
+		border-radius: 4px;
+		background: var(--black-white-black, #000);
+		box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
+		color: var(--black-white-white, #fff);
 		font-size: $font-body-small;
-		font-family: "SF Pro Text", $sans;
-		font-style: normal;
-		font-weight: 400;
-		line-height: 20px; /* 142.857% */
-		letter-spacing: -0.15px;
-	}
-
-	.thank-you__upsell-content-text-title {
-		color: var(--studio-gray-100, #101517);
-		font-size: $font-body;
-		font-family: "SF Pro Text", $sans;
-		font-style: normal;
 		font-weight: 500;
-		line-height: 24px; /* 150% */
-		letter-spacing: -0.32px;
-	}
-
-
-	.thank-you__upsell-content-actions {
-		display: flex;
-		height: 40px;
-		padding: 10px 24px 10px 0;
 		justify-content: center;
-		align-items: center;
-		gap: 8px;
+		padding: 10px 24px;
 
-		@media (max-width: $break-mobile ) {
-			padding: 0 20px 30px;
-		}
-
-		a.components-button {
-			border-radius: 4px;
-			background: var(--black-white-black, #000);
-			box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
+		&:hover {
+			background: var(--black-white-black, #333);
 			color: var(--black-white-white, #fff);
-			text-align: center;
-			font-family: "SF Pro Text", $sans;
-			font-size: $font-body-small;
-			font-style: normal;
-			font-weight: 500;
-			line-height: 20px; /* 142.857% */
-			letter-spacing: 0.32px;
-			padding: 10px 24px;
-			text-decoration: none;
-
-			&:hover {
-				background: var(--black-white-black, #333);
-			}
 		}
 	}
 }
