Add invite button in calypso

--- a/client/my-sites/people/people-list-item/style.scss
+++ b/client/my-sites/people/people-list-item/style.scss
@@ -49,6 +49,10 @@
 	}
 }
 
+.people-list-item.is-not-linked-user {
+	background: var(--studio-gray-10);
+}
+
 .people-list-item__invite-status {
 	align-self: center;
 	flex-shrink: 0;
