--- a/client/my-sites/stats/stats-purchase/styles.scss
+++ b/client/my-sites/stats/stats-purchase/styles.scss
@@ -577,3 +577,15 @@ $button-padding: 8px 32px;
 		}
 	}
 }
+
+.stats-purchase-wizard__actions {
+	display: flex;
+	flex-wrap: wrap;
+	gap: 12px;
+
+	margin: 12px 0;
+
+	.components-button + button.components-button {
+		margin: 0;
+	}
+}
