Filter our when invite has been sent

--- a/client/my-sites/people/people-list-item/style.scss
+++ b/client/my-sites/people/people-list-item/style.scss
@@ -90,7 +90,8 @@
 }
 
 .people-list-item__invite-resend.button,
-.people-list-item__invite-revoke.button {
+.people-list-item__invite-revoke.button,
+.people-list-item__invite-send {
 	vertical-align: baseline;
 	margin-left: 0.75rem;
 
