--- a/client/my-sites/plugins/plugins-discovery-page/style.scss
+++ b/client/my-sites/plugins/plugins-discovery-page/style.scss
@@ -26,18 +26,25 @@
 		font-size: 0.875rem;
 		line-height: 22px;
 		white-space: nowrap;
+		width: 100%;
+
+		@include break-wide {
+			width: auto;
+		}
 	}
 
 	.banner__action .button:not(:first-child) {
 		background-color: var(--color-surface);
 		border: 1px solid var(--color-neutral-10);
-		margin-left: 12px;
-		margin-top: 0;
 
-		@include breakpoint-deprecated( "<480px" ) {
-			width: 100%;
-			margin-top: 12px;
-			margin-left: 0;
+		width: 100%;
+		margin-top: 12px;
+		margin-left: 0;
+
+		@include break-wide {
+			width: auto;
+			margin-left: 12px;
+			margin-top: 0;
 		}
 	}
 }
