--- a/client/blocks/importer/wordpress/import-everything/pre-migration/style.scss
+++ b/client/blocks/importer/wordpress/import-everything/pre-migration/style.scss
@@ -63,6 +63,23 @@
 				width: 100%;
 			}
 		}
+
+		.credentials-form__actions {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+
+			button[type="submit"] {
+				min-width: 225px !important;
+			}
+
+			& > div {
+				font-size: 0.875rem;
+				/* stylelint-disable-next-line declaration-property-unit-allowed-list */
+				line-height: 2.5rem;
+				text-align: center;
+			}
+		}
 	}
 
 	.step-container__content {
