--- a/client/blocks/importer/wordpress/import-everything/pre-migration/style.scss
+++ b/client/blocks/importer/wordpress/import-everything/pre-migration/style.scss
@@ -8,6 +8,16 @@
 	padding: 0 rem(20px);
 	max-width: 100%;
 
+	.import__heading {
+		margin-bottom: 0;
+		.onboarding-title {
+			line-height: 57.6px;
+			letter-spacing: -0.32px;
+			font-size: 3rem;
+			margin-bottom: 8px;
+		}
+	}
+
 	.pre-migration__form-container {
 		display: flex;
 		flex-wrap: wrap;
@@ -95,13 +105,38 @@
 		text-align: center;
 	}
 
-	.pre-migration__credentials {
+	.pre-migration__main-content {
 		text-align: center;
 		margin-bottom: rem(40px);
+		line-height: 24px;
+		color: var(--gray-gray-50, #646970);
+
+		&-primary-text {
+			margin-bottom: rem(24px);
+			& span::before {
+				content: "";
+				white-space: normal;
+				@include break-medium {
+					content: "\a";
+					white-space: pre;
+				}
+			}
+		}
+	}
+
+	.pre-migration__credentials {
+		text-align: center;
+		margin-top: rem(16px);
+		margin-bottom: rem(40px);
+		color: var(--gray-gray-50, #646970);
+		font-size: 0.75rem;
 
 		button {
 			vertical-align: baseline;
-			font-size: 1rem;
+			color: var(--gray-gray-50, #646970);
+			font-size: 0.75rem;
+			padding: 0;
+			font-weight: 400;
 		}
 	}
 
@@ -152,6 +187,18 @@
 				margin: 0;
 				margin-inline-end: rem(16px);
 			}
+		}
+	}
+
+	.pre-migration__footer-jetpack-powered {
+		margin-top: rem(376px);
+		margin-bottom: rem(40px);
+		display: flex;
+		font-size: 0.75rem;
+		justify-content: center;
+
+		& svg.jetpack-logo {
+			margin-right: 0.5rem;
 		}
 	}
 }
