--- a/client/layout/masterbar/woo.scss
+++ b/client/layout/masterbar/woo.scss
@@ -103,6 +103,60 @@
 		background-color: initial;
 	}
 
+	.layout__content {
+		.notice {
+			border-radius: 8px; // stylelint-disable-line scales/radii
+			overflow: auto;
+			padding: 16px 20px;
+			background-color: #f6f7f7;
+
+			.notice__icon-wrapper {
+				background-color: #f6f7f7;
+				color: #2c3338;
+				width: auto;
+				padding: 0;
+				align-items: flex-start;
+			}
+
+			.notice__dismiss {
+				padding: 0;
+				background-color: #f6f7f7;
+				color: #a7aaad;
+			}
+
+			.notice__content {
+				padding: 0 16px;
+				background-color: #f6f7f7;
+				color: #2c3338;
+			}
+
+			.notice__text {
+				color: #2c3338;
+				font-size: rem(14px);
+				font-style: normal;
+				font-weight: 400;
+				line-height: 20px; /* 142.857% */
+				letter-spacing: -0.24px;
+
+				a,
+				a:visited,
+				a:hover, {
+					color: $woo-purple-60;
+					font-size: rem(14px);
+					font-style: normal;
+					font-weight: 500;
+					line-height: 20px;
+					letter-spacing: -0.24px;
+					text-decoration: none;
+				}
+			}
+
+			.notice__icon-wrapper-drop {
+				display: none;
+			}
+		}
+	}
+
 	.masterbar__progress-bar {
 		background-color: transparent;
 		height: 8px;
@@ -818,6 +872,7 @@
 				}
 			}
 		}
+
 		.login__form-userdata label.form-label {
 			line-height: 16px;
 		}
