Make class name more specific.

--- a/client/reader/tag-stream/style.scss
+++ b/client/reader/tag-stream/style.scss
@@ -97,7 +97,7 @@
 .is-reader-page .main .tag-stream__empty-content {
 	margin-top: 15px;
 
-	div {
+	.tag-stream__empty-content-message {
 		margin: 16px 0 24px;
 	}
 }
