Show user's debt

--- a/client/my-sites/promote-post-i2/style.scss
+++ b/client/my-sites/promote-post-i2/style.scss
@@ -297,6 +297,11 @@ body.is-section-promote-post-i2 {
 		}
 	}
 
+	.promote-post-i2__debt-notifier {
+		color: $studio-gray-100;
+		padding-top: 16px;
+	}
+
 	.section-nav-tab {
 		margin-right: 16px;
 
@@ -452,6 +457,7 @@ body.is-section-promote-post-i2 {
 
 				.promote-post-i2__header-subtitle_mobile,
 				.promote-post-i2__search-bar-wrapper,
+				.promote-post-i2__debt-notifier,
 				.posts-list__table,
 				.posts-list__loading-container,
 				.promote-post-i2__table,
@@ -564,6 +570,7 @@ $break-medium-expanded-menu: $break-medium + 272px;
 	.promote-post-i2__search-bar-wrapper,
 	.promote-post-i2__table,
 	.promote-post-i2__aux-wrapper,
+	.promote-post-i2__debt-notifier,
 	.posts-list-banner__container .posts-list-banner__content,
 	.posts-list-woo-banner__container .posts-list-banner__content {
 		margin-left: auto;
