Fix button style

--- a/client/layout/masterbar/woo.scss
+++ b/client/layout/masterbar/woo.scss
@@ -97,6 +97,10 @@
 		color: #fff;
 		width: 100%;
 
+		&.is-busy {
+			background-image: none;
+		}
+
 		&:hover {
 			background-color: $woo-purple-40;
 		}
