--- a/client/components/domains/domain-suggestion/style.scss
+++ b/client/components/domains/domain-suggestion/style.scss
@@ -381,14 +381,17 @@ body.is-section-signup.is-white-signup {
 			justify-content: space-between;
 		}
 
-		.domain-product-price {
-			max-width: 180px;
-			width: unset;
+		.domain-product-price__free-text {
+			font-size: $font-body-small;
+			color: var(--studio-green-60);
 		}
 
-		.domain-product-price__free-text {
-			color: var(--color-neutral-60);
-			font-size: $font-body;
+		.domain-product-price__free-price {
+			font-weight: initial;
+
+			@include break-mobile {
+				font-weight: 500;
+			}
 		}
 
 		.domain-product-price__price {
@@ -425,18 +428,6 @@ body.is-section-signup.is-white-signup {
 			white-space: nowrap;
 		}
 
-		& .domain-product-price__free-price {
-			font-size: $font-body-small;
-			font-weight: initial;
-			color: var(--studio-green-60);
-			line-height: 20px;
-			letter-spacing: 0.2px;
-
-			@include break-mobile {
-				font-weight: 500;
-			}
-		}
-
 		&:not(.featured-domain-suggestion) {
 			background: none;
 			border-bottom: 1px solid rgba(220, 220, 222, 0.64);
@@ -454,6 +445,14 @@ body.is-section-signup.is-white-signup {
 
 				.domain-registration-suggestion__domain-title-tld {
 					font-weight: 500;
+				}
+			}
+
+			.domain-product-price {
+				width: unset;
+
+				@include break-small {
+					max-width: 180px;
 				}
 			}
 
