--- a/client/blocks/importer/wordpress/import-everything/import-users/style.scss
+++ b/client/blocks/importer/wordpress/import-everything/import-users/style.scss
@@ -6,7 +6,7 @@
 
 	.import__user-migration-button-container {
 		display: flex;
-        flex-direction: row;
+		flex-direction: row;
 		justify-content: center;
 	}
 }
@@ -14,6 +14,7 @@
 .imported-user-item {
 	display: flex;
 	align-items: center;
+	box-shadow: none;
 
 	.imported-user-item__display-name {
 		font-size: 1rem;
@@ -31,5 +32,33 @@
 
 	.imported-user-item__roles {
 		margin-left: auto;
+
+		.imported-user-item__role {
+			background: var(--color-surface);
+			border: 1px solid var(--color-neutral-light);
+			border-radius: 2px;
+			color: var(--color-text-subtle);
+			font-size: 0.75rem;
+			margin-left: 8px;
+			padding: 2px 6px;
+			white-space: pre;
+
+			&.role-super-admin {
+				background: var(--color-error);
+				border: none;
+				color: var(--color-text-inverted);
+			}
+
+			&.role-administrator,
+			&.role-admin-owner {
+				background: var(--color-neutral-70);
+				border: none;
+				color: var(--color-text-inverted);
+			}
+		}
 	}
+}
+
+.imported-user-item + .imported-user-item {
+	border-top: 1px solid var(--studio-gray-5, #dcdcde);
 }
