--- a/client/jetpack-cloud/sections/agency-dashboard/connect-url/style.scss
+++ b/client/jetpack-cloud/sections/agency-dashboard/connect-url/style.scss
@@ -7,7 +7,10 @@
 }
 
 .connect-url__file-picker {
-	display: block;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 	width: 100%;
 	border: 1px dashed #ccc;
 	padding: 2rem 0;
