--- a/client/jetpack-cloud/sections/manage/pricing/license-products-list/style.scss
+++ b/client/jetpack-cloud/sections/manage/pricing/license-products-list/style.scss
@@ -1,13 +1,6 @@
 @import "@wordpress/base-styles/breakpoints";
 @import "@wordpress/base-styles/mixins";
 
-.product-license-price-with-discount__price-discount {
-	font-size: $font-title-small;
-	font-weight: 500;
-	color: var(--studio-jetpack-green-50);
-	text-wrap: nowrap;
-}
-
 .jetpack-product-store__most-popular--heading,
 .jetpack-product-store__all-items--header {
 	margin-bottom: 0.5rem !important;
@@ -23,13 +16,8 @@
 	padding-top: 2.5rem;
 }
 
-.main.is-wide-layout.jetpack-manage-pricing-page {
-	max-width: 1192px;
-	padding: 0 1rem; // this is for plans page on WPCOM
-
-	@include break-wide {
-		padding: 0;
-	}
+.jetpack-product-store__products-list .license-lightbox-link-icon {
+	display: none;
 }
 
 .featured-item-card,
@@ -108,6 +96,15 @@
 	}
 }
 
+.featured-item-card {
+	.featured-item-card--desc {
+		font-size: 1rem;
+	}
+	.featured-item-card--body .license-lightbox-link {
+		padding-top: 0.5rem;
+	}
+}
+
 .jetpack-product-store__most-popular--item .featured-item-card .display-price {
 	display: block !important;
 	.product-license-price-with-discount__price-discount {
@@ -129,6 +126,7 @@
 	}
 
 	.product-license-price-with-discount__price-interval {
+		color: var(--studio-gray-50);
 		font-size: $font-body-extra-small;
 		padding-top: 4px;
 		display: block;
@@ -136,6 +134,9 @@
 
 	.product-license-price-with-discount__price-discount {
 		font-size: 1rem;
+		font-weight: 500;
+		color: var(--studio-jetpack-green-50);
+		text-wrap: nowrap;
 	}
 
 	.is-discounted {
@@ -145,18 +146,5 @@
 			font-size: $font-title-small;
 		}
 	}
-}
-
-.featured-item-card {
-	.featured-item-card--desc {
-		font-size: 1rem;
-	}
-	.featured-item-card--body .license-lightbox-link {
-		padding-top: 0.5rem;
-	}
-}
-
-.license-lightbox-link-icon {
-	display: none;
 }
 
