--- a/client/jetpack-cloud/sections/manage/pricing/pricing-license-selector/style.scss
+++ b/client/jetpack-cloud/sections/manage/pricing/pricing-license-selector/style.scss
@@ -35,7 +35,7 @@
 			text-align: center;
 			width: 100%;
 			font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-			font-size: 14px; /* stylelint-disable-line declaration-property-unit-allowed-list */
+			font-size: $font-body-small;
 			cursor: pointer; /* Changes the cursor to a pointer */
 			user-select: none; /* Prevents text selection */
 
