--- a/packages/calypso-color-schemes/src/calypso-color-schemes.scss
+++ b/packages/calypso-color-schemes/src/calypso-color-schemes.scss
@@ -4,6 +4,7 @@
 @import "shared/color-schemes/aquatic";
 @import "shared/color-schemes/blue";
 @import "shared/color-schemes/classic-blue";
+@import "shared/color-schemes/classic-bright";
 @import "shared/color-schemes/classic-dark";
 @import "shared/color-schemes/coffee";
 @import "shared/color-schemes/contrast";
