--- a/packages/plans-grid-next/src/_media-queries.scss
+++ b/packages/plans-grid-next/src/_media-queries.scss
@@ -1,8 +1,8 @@
 @import "@automattic/components/src/highlight-cards/variables.scss";
 
+// TODO clk used in plans-features-main / should migrate there
 $plan-features-header-banner-height: 20px;
 
-// Plan Features Grid Breakpoints
 $plans-2023-small-breakpoint: 780px;
 
 /**
@@ -25,9 +25,6 @@ $plans-2023-small-breakpoint: 780px;
 /**
  * @see @automattic/plans-grid-next/src/components/plan-type-selector/style.scss
  * This introduces mobile only sticky behavior for the plan type selector.
- *
- * TODO clk need to update to use GridSize / container breakpoints
- *
  */
 @mixin plan-type-selector-custom-mobile-breakpoint() {
 	@media ( max-width: $plans-2023-small-breakpoint ) {
